--- a/src/app/components/user-pages/user-profile/user-profile.component.html
+++ b/src/app/components/user-pages/user-profile/user-profile.component.html
@@ -9,7 +9,7 @@
 <div class="container-fluid mt-4" *ngIf="!isLoading" style="min-height: 63vh">
     <div class="row">
         <!-- card-info -->
-        <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
+        <div class="col-xl-6 col-md-10 order-xl-2 mb-5 mb-xl-0 mx-auto">
             <div class="card card-profile p-4 shadow" [formGroup]="formGroup">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h5>My Account</h5>
@@ -86,227 +86,6 @@
             </div>
         </div>
         <!-- detail-info -->
-        <div class="col-xl-8 order-xl-1">
-            <div class="card shadow mb-3">
-                <div class="card-body">
-                    <h4 class="heading-small text-muted mb-4">My purchase</h4>
-                    <div class="pl-lg-6">
-                        <div class="row">
-                            <p-tabView>
-                                <p-tabPanel header="All">
-                                    <p-table #dt [value]="listTransactions" [rows]="5" [paginator]="true"
-                                        [tableStyle]="{ 'width': '100%' }" [rowHover]="true" dataKey="id"
-                                        styleClass="p-datatable-striped" [tableStyle]="{ 'min-width': '25rem' }">
-                                        <ng-template pTemplate="header">
-                                            <tr class="py-5">
-                                                <th>
-                                                    Invoice ID
-                                                </th>
-                                                <th pSortableColumn="createdDate" style="min-width: 6rem" class="ps-4">
-                                                    Date
-                                                </th>
 
-                                                <th pSortableColumn="finalPrice">
-                                                    Price
-                                                </th>
-
-                                                <th pSortableColumn="paymentType">
-                                                    Payment
-                                                </th>
-                                                <th pSortableColumn="status">
-                                                    Status
-                                                </th>
-                                                <th>Action</th>
-                                            </tr>
-                                        </ng-template>
-                                        <ng-template pTemplate="body" let-invoice>
-                                            <tr style="cursor: pointer">
-                                                <td class="ps-4">
-                                                    {{ invoice.invoiceId || invoice.liveInvoiceId }}
-                                                </td>
-                                                <td class="">
-                                                    {{ invoice.createdDate | date : "dd/MM/yyyy" }}
-                                                </td>
-                                                <td>{{ invoice.finalPrice | currency : "VND" }}</td>
-                                                <td>
-
-                                                    <p-tag
-                                                        [value]="invoice.paymentType === 'CREDIT_CARD' ? 'Paid': 'COD'"
-                                                        [severity]="invoice.paymentType === 'CREDIT_CARD' ? 'success': 'info'"></p-tag>
-                                                </td>
-                                                <td>
-                                                    <p-tag [value]="invoice.status"
-                                                        [severity]="getSeverity(invoice.status)"></p-tag>
-                                                </td>
-                                                <td>
-                                                    <button pButton pRipple icon="pi pi-eye"
-                                                        class="p-button-rounded p-button-info mr-2"
-                                                        (click)="onRowSelect(invoice)" pTooltip="Detail"></button>
-                                                </td>
-                                            </tr>
-                                        </ng-template>
-                                    </p-table>
-
-                                    <hr *ngIf="cart" class="mt-4" />
-                                    <div *ngIf="selectedInvoice" class="d-flex align-items-center gap-4">
-                                        <h4 id='invoice'>Invoice ID: {{selectedInvoice.invoiceId ||
-                                            selectedInvoice.liveInvoiceId}}</h4>
-                                        <p-button *ngIf=" cart && selectedInvoice.status === 'PAID'"
-                                            styleClass="p-button-secondary" label="Received"
-                                            (onClick)="$event.stopPropagation(); updateStatus('COMPLETED')"></p-button>
-                                        <p-button
-                                            *ngIf="selectedInvoice.status === 'PENDING' ||selectedInvoice.status === 'CANCEL'"
-                                            styleClass="p-button-secondary" label="Contact"
-                                            (onClick)="$event.stopPropagation(); contactAdmin(invoice)"></p-button>
-                                    </div>
-                                    <p-table *ngIf="cart" #dt [value]="cart" responsiveLayout="scroll"
-                                        [(selection)]="selectedProducts" dataKey="cartItemId" [rows]="8"
-                                        [paginator]="true" [rowHover]="true">
-                                        <ng-template pTemplate="header">
-                                            <tr>
-                                                <th>Product</th>
-                                                <th pSortableColumn="unitPrice">
-                                                    Price <p-sortIcon field="unitPrice"></p-sortIcon>
-                                                </th>
-                                                <th pSortableColumn="quantity">
-                                                    Quantity <p-sortIcon field="quantity"></p-sortIcon>
-                                                </th>
-                                                <th pSortableColumn="totalItemPrice">
-                                                    Total <p-sortIcon field="totalItemPrice"></p-sortIcon>
-                                                </th>
-                                                <th></th>
-                                            </tr>
-                                        </ng-template>
-                                        <ng-template pTemplate="body" let-product>
-                                            <tr>
-                                                <td style="min-width: 10rem">
-                                                    <span class="p-column-title">Name</span>
-                                                    <img [src]="product?.image" width="100" class="shadow-4 me-2" />
-                                                    {{ product.name }}
-                                                </td>
-
-                                                <td style="width: 14%; min-width: 8rem">
-                                                    <span class="p-column-title">Price</span>
-                                                    {{ product.unitPrice | currency : "VND" }}
-                                                </td>
-                                                <td style="width: 14%; min-width: 10rem" class="num-product">
-                                                    <span class="p-column-title">Quantity</span>
-                                                    {{ product.quantity }}
-                                                </td>
-                                                <td style="width: 14%; min-width: 10rem">
-                                                    <span class="p-column-title">Total</span>
-                                                    {{ product.totalPrice | currency : "VND" }}
-                                                </td>
-                                                <td>
-                                                    <p-button icon="pi pi-pencil" styleClass="p-button-secondary"
-                                                        label="Review" (onClick)="addRating(product)"></p-button>
-                                                </td>
-                                            </tr>
-                                        </ng-template>
-                                    </p-table>
-                                </p-tabPanel>
-                                <!-- <p-tabPanel header="To Pay">
-                                    <p>
-                                        Sed ut perspiciatis unde omnis iste
-                                        natus error sit voluptatem accusantium
-                                        doloremque laudantium, totam rem
-                                        aperiam, eaque ipsa quae ab illo
-                                        inventore veritatis et quasi architecto
-                                        beatae vitae dicta sunt explicabo. Nemo
-                                        enim ipsam voluptatem quia voluptas sit
-                                        aspernatur aut odit aut fugit, sed quia
-                                        consequuntur magni dolores eos qui
-                                        ratione voluptatem sequi nesciunt.
-                                        Consectetur, adipisci velit, sed quia
-                                        non numquam eius modi.
-                                    </p>
-                                </p-tabPanel>
-                                <p-tabPanel header="To Ship">
-                                    <p>
-                                        At vero eos et accusamus et iusto odio
-                                        dignissimos ducimus qui blanditiis
-                                        praesentium voluptatum deleniti atque
-                                        corrupti quos dolores et quas molestias
-                                        excepturi sint occaecati cupiditate non
-                                        provident, similique sunt in culpa qui
-                                        officia deserunt mollitia animi, id est
-                                        laborum et dolorum fuga. Et harum quidem
-                                        rerum facilis est et expedita
-                                        distinctio. Nam libero tempore, cum
-                                        soluta nobis est eligendi optio cumque
-                                        nihil impedit quo minus.
-                                    </p>
-                                </p-tabPanel>
-                                <p-tabPanel header="To Revceive">
-                                    <p>
-                                        At vero eos et accusamus et iusto odio
-                                        dignissimos ducimus qui blanditiis
-                                        praesentium voluptatum deleniti atque
-                                        corrupti quos dolores et quas molestias
-                                        excepturi sint occaecati cupiditate non
-                                        provident, similique sunt in culpa qui
-                                        officia deserunt mollitia animi, id est
-                                        laborum et dolorum fuga. Et harum quidem
-                                        rerum facilis est et expedita
-                                        distinctio. Nam libero tempore, cum
-                                        soluta nobis est eligendi optio cumque
-                                        nihil impedit quo minus.
-                                    </p>
-                                </p-tabPanel>
-                                <p-tabPanel header="Completed">
-                                    <p>
-                                        At vero eos et accusamus et iusto odio
-                                        dignissimos ducimus qui blanditiis
-                                        praesentium voluptatum deleniti atque
-                                        corrupti quos dolores et quas molestias
-                                        excepturi sint occaecati cupiditate non
-                                        provident, similique sunt in culpa qui
-                                        officia deserunt mollitia animi, id est
-                                        laborum et dolorum fuga. Et harum quidem
-                                        rerum facilis est et expedita
-                                        distinctio. Nam libero tempore, cum
-                                        soluta nobis est eligendi optio cumque
-                                        nihil impedit quo minus.
-                                    </p>
-                                </p-tabPanel>
-                                <p-tabPanel header="Cancelled">
-                                    <p>
-                                        At vero eos et accusamus et iusto odio
-                                        dignissimos ducimus qui blanditiis
-                                        praesentium voluptatum deleniti atque
-                                        corrupti quos dolores et quas molestias
-                                        excepturi sint occaecati cupiditate non
-                                        provident, similique sunt in culpa qui
-                                        officia deserunt mollitia animi, id est
-                                        laborum et dolorum fuga. Et harum quidem
-                                        rerum facilis est et expedita
-                                        distinctio. Nam libero tempore, cum
-                                        soluta nobis est eligendi optio cumque
-                                        nihil impedit quo minus.
-                                    </p>
-                                </p-tabPanel>
-                                <p-tabPanel header="Return">
-                                    <p>
-                                        At vero eos et accusamus et iusto odio
-                                        dignissimos ducimus qui blanditiis
-                                        praesentium voluptatum deleniti atque
-                                        corrupti quos dolores et quas molestias
-                                        excepturi sint occaecati cupiditate non
-                                        provident, similique sunt in culpa qui
-                                        officia deserunt mollitia animi, id est
-                                        laborum et dolorum fuga. Et harum quidem
-                                        rerum facilis est et expedita
-                                        distinctio. Nam libero tempore, cum
-                                        soluta nobis est eligendi optio cumque
-                                        nihil impedit quo minus.
-                                    </p>
-                                </p-tabPanel> -->
-                            </p-tabView>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
