--- a/src/app/components/merchant-pages/chat/chat.component.html
+++ b/src/app/components/merchant-pages/chat/chat.component.html
@@ -7,51 +7,28 @@
                     <div class="search-bar w-100 d-flex flex-nowrap">
                         <span class="p-input-icon-left w-100 px-2">
                             <i class="pi pi-search"></i>
-                            <input
-                                type="text"
-                                placeholder="Enter name ..."
-                                class="rounded-4 p-1 w-100"
-                                [(ngModel)]="userSearch"
-                                (ngModelChange)="onUserSearched()"
-                                pInputText
-                            />
+                            <input type="text" placeholder="Enter name ..." class="rounded-4 p-1 w-100"
+                                [(ngModel)]="userSearch" (ngModelChange)="onUserSearched()" pInputText />
                         </span>
                     </div>
                     <div class="recipient-container pt-2">
-                        <div
-                            *ngIf="isLoadingChatRoom"
-                            class="loading w-100 h-50 position-absolute d-flex justify-content-center align-items-center flex-column gap-2"
-                        >
+                        <div *ngIf="isLoadingChatRoom"
+                            class="loading w-100 h-50 position-absolute d-flex justify-content-center align-items-center flex-column gap-2">
                             <div class="spinner-border" role="status">
                                 <span class="sr-only"></span>
                             </div>
                             <p style="opacity: 0.7">Loading</p>
                         </div>
-                        <div
-                            class="reciepient rounded-3 m-1 p-2 d-flex align-items-center"
-                            *ngFor="let user of listUsers"
-                            (click)="selectUser(user)"
-                            [id]="user.userId"
-                        >
+                        <div class="reciepient rounded-3 m-1 p-2 d-flex align-items-center"
+                            *ngFor="let user of listUsers" (click)="selectUser(user)" [id]="user.userId">
                             <div class="avatar">
-                                <img
-                                    src="{{ user.userAvatar }}"
-                                    onerror="this.onerror=null;this.src='/assets/no_user.png';"
-                                    alt=""
-                                    class="rounded-circle ms-2"
-                                />
-                                <div
-                                    class="unread-message rounded-circle"
-                                    *ngIf="!user.isRead"
-                                ></div>
+                                <img src="{{ user.userAvatar }}"
+                                    onerror="this.onerror=null;this.src='/assets/no_user.png';" alt=""
+                                    class="rounded-circle ms-2" />
+                                <div class="unread-message rounded-circle" *ngIf="!user.isRead"></div>
                             </div>
-                            <div
-                                class="content d-flex align-items-center justify-content-center"
-                            >
-                                <div
-                                    class="name"
-                                    [ngClass]="{ 'unread-name': !user.isRead }"
-                                >
+                            <div class="content d-flex align-items-center justify-content-center">
+                                <div class="name" [ngClass]="{ 'unread-name': !user.isRead }">
                                     {{ user.userName }}
                                 </div>
                             </div>
@@ -59,60 +36,44 @@
                     </div>
                 </div>
 
-                <div
-                    class="empty-boxchat col-sm-9 d-flex align-items-center justify-content-center"
-                    *ngIf="!currentUser"
-                >
+                <div class="empty-boxchat col-sm-9 d-flex align-items-center justify-content-center"
+                    *ngIf="!currentUser">
                     <p style="font-size: 1.25rem; width: fit-content">
                         Who you want to send message ...
                     </p>
                 </div>
                 <div class="boxchat col-sm-9" *ngIf="currentUser">
-                    <div
-                        *ngIf="isLoadingChatContent"
-                        class="loading w-100 h-100 position-absolute d-flex d-flex justify-content-center align-items-center flex-column gap-2 bg-body rounded-3 z-3"
-                    >
+                    <div *ngIf="isLoadingChatContent"
+                        class="loading w-100 h-100 position-absolute d-flex d-flex justify-content-center align-items-center flex-column gap-2 bg-body rounded-3 z-3">
                         <div class="spinner-border" role="status">
                             <span class="sr-only"></span>
                         </div>
                         <p style="opacity: 0.7">Loading...</p>
                     </div>
                     <div class="chat-header p-2 m-1 rounded-3">
-                        <img
-                            src="{{ currentUser.userAvatar }}"
-                            onerror="this.onerror=null;this.src='/assets/no_user.png';"
-                            alt=""
-                            class="rounded-circle mx-2"
-                        />
+                        <img src="{{ currentUser.userAvatar || '/assets/no_user.png' }}"
+                            onerror="this.onerror=null;this.src='/assets/no_user.png';" alt=""
+                            class="rounded-circle mx-2" />
                         <div class="name">{{ currentUser.userName }}</div>
                     </div>
                     <div class="chat-content" id="boxchat">
-                        <div
-                            *ngFor="let message of currentUserChat"
-                            class="d-flex m-2 mx-4 message"
-                            [ngClass]="{
+                        <div *ngFor="let message of currentUserChat" class="d-flex m-2 mx-4 message" [ngClass]="{
                                 'sender-message': senderId === message.senderId
-                            }"
-                        >
-                            <img
-                                width="40px"
-                                height="40px"
-                                src="{{
+                            }">
+                            <img width="40px" height="40px" src="{{
                                     senderId === message.senderId
                                         ? senderAvatar || '/assets/no_user.png'
                                         : currentUser.userAvatar ||
                                           '/assets/no_user.png'
-                                }}"
-                                onerror="this.onerror=null;this.src='/assets/no_user.png';"
-                                class="d-flex align-items-center rounded-circle"
-                            />
+                                }}" onerror="this.onerror=null;this.src='/assets/no_user.png';"
+                                class="d-flex align-items-center rounded-circle" />
                             <div class="message-content rounded-3 p-2 m-1 mx-2">
                                 {{ message.content }}
                             </div>
                             <div class="time px-2 my-auto">
                                 {{
-                                    message.timestamp
-                                        | date : "hh:mm:ss dd/MM/yyyy"
+                                message.timestamp
+                                | date : "hh:mm:ss dd/MM/yyyy"
                                 }}
                             </div>
                         </div>
@@ -120,17 +81,9 @@
 
                     <div class="input-message">
                         <span>
-                            <input
-                                type="text"
-                                [(ngModel)]="message"
-                                (keydown.enter)="sendMessage()"
-                                (focus)="onFocusBoxChat()"
-                                placeholder="Enter message ..."
-                            />
-                            <button
-                                (click)="sendMessage()"
-                                [disabled]="!message"
-                            >
+                            <input type="text" [(ngModel)]="message" (keydown.enter)="sendMessage()"
+                                (focus)="onFocusBoxChat()" placeholder="Enter message ..." />
+                            <button (click)="sendMessage()" [disabled]="!message">
                                 Send
                                 <i class="ps-1 bi bi-send"></i>
                             </button>
