--- a/src/app/components/merchant-pages/merchant/merchant.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant.component.html
@@ -66,7 +66,7 @@
                             <div class="flex">
                                 <button pButton pRipple icon="pi pi-ellipsis-h"
                                     class="p-button-rounded p-button-text mr-2"
-                                    (click)="selectedMerchant = merchant; menu.toggle($event)"></button>
+                                    (click)="selectedMerchant = merchant; initMenuItems(); menu.toggle($event)"></button>
                                 <p-menu #menu [model]="items" [popup]="true" appendTo="body"></p-menu>
 
                             </div>
