--- a/src/app/components/user-pages/user-pages.component.html
+++ b/src/app/components/user-pages/user-pages.component.html
@@ -1,3 +1,3 @@
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer style="position: relative; bottom: 0;"></app-footer>
