--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <h2 class="logo">PESCUE</h2>
+            <h2 (click)="routeToHome()" class="logo" style="cursor: pointer;">PESCUE</h2>
 
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
