--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -48,7 +48,7 @@
 
         </section>
         <h2 *ngIf="isLogin">Live channels</h2>
-        <section *ngIf="isLogin" class="recommended-live">
+        <section *ngIf="isLogin && listStream.length" class="recommended-live">
             <swiper-container class="mySwiper" navigation="true" space-between="30" autoplay-delay="3500" rewind="true"
                 autoplay-disable-on-interaction="false" slides-per-view="3">
                 <swiper-slide *ngFor="let stream of listStream" class="live-slide cursor-pointer"
