fix: remove duplicate message

--- a/src/app/components/merchant-pages/product/product-detail/product-detail.component.html
+++ b/src/app/components/merchant-pages/product/product-detail/product-detail.component.html
@@ -322,4 +322,4 @@
         </form>
     </div>
 </div>
-<p-toast key="toast"></p-toast>
+<p-toast key="toast" [preventOpenDuplicates]="true"></p-toast>
