--- a/src/app/components/merchant-pages/order/live-order/live-order.component.html
+++ b/src/app/components/merchant-pages/order/live-order/live-order.component.html
@@ -26,7 +26,8 @@
                     'cityName',
                     'districtName',
                     'wardName',
-                    'invoiceId'
+                    'invoiceId',
+                    'liveInvoiceId'
                 ]" [(selection)]="selectedVouchers" selectionMode="multiple" [rowHover]="true" dataKey="invoiceId">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
