--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -154,7 +154,7 @@
     </div>
     <div class="col-12 xl:col-12">
         <div class="card">
-            <h5>Sales Overview This Week</h5>
+            <h5>Sales Overview This Month</h5>
             <p-chart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
         </div>
     </div>
